--- a/sass/_recipes.scss
+++ b/sass/_recipes.scss
@@ -2,6 +2,7 @@
 
 .main__container {
   background-color: white;
+  overflow: hidden;
 
   & img {
     width: 100%;
