--- a/sass/styles.css
+++ b/sass/styles.css
@@ -112,7 +112,7 @@ body {
 }
 
 /* Placeholder*/
-.secondary__title, .secondary__container {
+.secondary__title, .secondary__container, .contact-us h2 {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -260,6 +260,7 @@ body {
 /*Main grid */
 .main__container {
   background-color: white;
+  overflow: hidden;
 }
 
 .main__container img {
@@ -365,17 +366,16 @@ body {
   color: white;
 }
 
+/*Contact form styles*/
 .main-contact {
   margin: auto;
-}
-
-.contact-us h1 {
-  font-family: "Allura", cursive;
-  font-size: 7.2rem;
-}
-
-.main-contact {
   color: #012626;
+}
+
+.contact-us h2 {
+  font-family: "Allura", cursive;
+  font-size: 9rem;
+  min-height: 20vh;
 }
 
 .fas {
@@ -383,10 +383,26 @@ body {
 }
 
 .btn-form {
+  font-size: 1.5rem;
+  display: inline-block;
+  padding: 0.8rem 1.8rem;
+  margin-top: 2rem;
+  background-color: #325959;
   color: white;
 }
 
 .btn-form:hover {
-  color: white;
+  -webkit-transform: scale(1.07);
+          transform: scale(1.07);
+}
+
+/*Contact Media queries*/
+@media screen and (max-width: 425px) {
+  .contact-us h2 {
+    font-size: 8rem;
+  }
+  .fas {
+    display: none;
+  }
 }
 /*# sourceMappingURL=styles.css.map */
